--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 color="white" style="position:absolute; TOP:35px; left:420px;">
     Flourish Summer Camp Fundraising
   </h1>
-</div>
+</div align="center">
   <a href="gofundme.com/fundraising-for-flourish-summer-camp"> Our fund raising page.</a>
  </body>
 </html>
